# Dixon-Cole-world-cup

./: .gitignore  README.md  init_context.py  pyproject.toml  retrain_model.py  run_backtest.py  train_local.py
data/: h2h_records.json  sample_matches.json  sample_matches_weighted.json  team_contexts.json  trained_model.json  trained_ratings.json
frontend/: context.html  index.html
mundial_betting/: __init__.py  api.py  calibration.py  context_store.py  data.py  dixon_coles.py  models.py  sample_matches.json
scripts/: load_historical_data.py  train_model.py
tests/: test_context_store.py  test_dixon_coles.py
